# ImagePlay

./: .gitignore  .gitmodules  .travis.yml  Appcast.xml  CMakeLists.txt  CNAME  Doxyfile  ImagePlay.pro  ImagePlay.sln  Makefile  appimage.sh  changelog.html  changelog.md  index.html  install.md  license.md  readme.md  release.bat
IPL/: .qmake.stash  CMakeLists.txt  IPL.pro  IPL.vcxproj  IPL.vcxproj.filters  Makefile  Makefile.Debug  Makefile.Release  object_script.IPL.Debug  object_script.IPL.Release
IPL/doc/: IPLCanny.md  IPLConvertToGray.md
IPL/include/: IPLCameraIO.h  IPLColor.h  IPLComplexImage.h  IPLData.h  IPLErrorHandler.h  IPLEvent.h  IPLFileIO.h  IPLHistogram.h  IPLImage.h  IPLImagePlane.h  IPLKeyPoints.h  IPLMatrix.h  IPLOrientedImage.h  IPLOutputsChangedEventHandler.h  IPLPoint.h  IPLProcess.h  IPLProcessProperty.h  IPLProgressEventHandler.h  IPLPropertyChangedEventHandler.h  IPLRandomPoint.h  IPLVideoIO.h  IPL_global.h  IPL_plugininterface.h  IPL_processes.h  SimplexNoise.h
IPL/include/opencv/opencv2/: calib3d.hpp  (+2 more)
IPL/include/processes/: IPLAccumulate.h  IPLAddNoise.h  IPLAgglomerate.h  IPLArithmeticOperations.h  IPLArithmeticOperationsConstant.h  IPLBinarize.h  IPLBinarizeEntropy.h  IPLBinarizeKMeans.h  IPLBinarizeOtsu.h  IPLBinarizeSavola.h  IPLBinarizeUnimodal.h  IPLBlendImages.h  IPLCamera.h  IPLCameraCalibration.h  IPLCanny.h  IPLCanvasSize.h  IPLCombineImages.h  IPLCompassMask.h  IPLConvertToColor.h  IPLConvertToGray.h  IPLConvolutionFilter.h  IPLEnhanceMode.h  IPLEqualizeHistogram.h  IPLEquidensityLines.h  IPLExtractLines.h  IPLExtrema.h  IPLFFT.h  IPLFalseColor.h  IPLFeatureDetection.h  IPLFeatureMatcher.h  IPLFillConcavities.h  IPLFlipImage.h  IPLFloodFill.h  IPLFrequencyFilter.h  IPLGabor.h  IPLGammaCorrection.h  IPLGaussianLowPass.h  IPLGoodFeaturesToTrack.h  IPLGradientOperator.h  IPLHarrisCorner.h  (+43 more)
IPL/include/pugg/: Driver.h  Kernel.h  Plugin.h
IPL/src/: IPLCameraIO.cpp  IPLComplexImage.cpp  IPLData.cpp  IPLFileIO.cpp  IPLImage.cpp  IPLImagePlane.cpp  IPLKeyPoints.cpp  IPLMatrix.cpp  IPLOrientedImage.cpp  IPLPoint.cpp  IPLProcess.cpp  IPLProcessProperty.cpp  IPLVideoIO.cpp  IPL_global.cpp  SimplexNoise.cpp
IPL/src/processes/: IPLAccumulate.cpp  IPLAddNoise.cpp  IPLAgglomerate.cpp  IPLArithmeticOperations.cpp  IPLArithmeticOperationsConstant.cpp  IPLBinarize.cpp  IPLBinarizeEntropy.cpp  IPLBinarizeImage.cpp  IPLBinarizeKMeans.cpp  IPLBinarizeOtsu.cpp  IPLBinarizeSavola.cpp  IPLBinarizeUnimodal.cpp  IPLBlendImages.cpp  IPLCamera.cpp  IPLCameraCalibration.cpp  IPLCanny.cpp  IPLCanvasSize.cpp  IPLCombineImages.cpp  IPLCompassMask.cpp  IPLConvertToColor.cpp  IPLConvertToGray.cpp  IPLConvolutionFilter.cpp  IPLEnhanceMode.cpp  IPLEqualizeHistogram.cpp  IPLEquidensityLines.cpp  IPLExtractLines.cpp  IPLExtrema.cpp  IPLFFT.cpp  IPLFalseColor.cpp  IPLFeatureDetection.cpp  IPLFeatureMatcher.cpp  IPLFillConcavities.cpp  IPLFlipImage.cpp  IPLFloodFill.cpp  IPLFrequencyFilter.cpp  IPLGabor.cpp  IPLGammaCorrection.cpp  IPLGaussianLowPass.cpp  IPLGoodFeaturesToTrack.cpp  IPLGradientOperator.cpp  (+45 more)
ImagePlay/: CMakeLists.txt  ImagePlay.pro  ImagePlay.vcxproj  ImagePlay.vcxproj.filters  Makefile  Makefile.Debug  Makefile.Release
ImagePlay/doc/: ArithmeticOperations.md  TutorialProcesses.md  UML.uml  UML.~ml  index.md  tutorial.md
ImagePlay/include/: AboutWindow.h  ConnectionDialog.h  IPApplication.h  IPFilterLineEdit.h  IPHistogramThread.h  IPHistogramWidget.h  IPImageViewer.h  IPMorphologyCheckbox.h  IPPluginManager.h  IPProcessEdge.h  IPProcessEdgeTmp.h  IPProcessFactory.h  IPProcessGrid.h  IPProcessGridScene.h  IPProcessInputOutputWidget.h  IPProcessList.h  IPProcessListTabWidget.h  IPProcessMessageWidget.h  IPProcessPropertiesWidget.h  IPProcessScript.h  IPProcessStep.h  IPProcessThread.h  IPZoomWidget.h  ImageViewerWindow.h  MainWindow.h  PluginGenerator.h  SettingsWindow.h  TutorialDialog.h  stafx.h  stafx.h.cpp
ImagePlay/include/PropertyWidgets/: IPKernelPreset.h  IPPropertyBinaryMorphologyInt.h  IPPropertyBinaryMorphologyTristateInt.h  IPPropertyButtonBool.h  IPPropertyButtonInt.h  IPPropertyCheckbox.h  IPPropertyCheckboxInt.h  IPPropertyColorHSL.h  IPPropertyColorHSV.h  IPPropertyColorRGB.h  IPPropertyCombobox.h  IPPropertyFileOpen.h  IPPropertyFileSave.h  IPPropertyFolder.h  IPPropertyGrayscaleMorphologyInt.h  IPPropertyGroup.h  IPPropertyKernelInt.h  IPPropertyMatrixDouble.h  IPPropertyPoint.h  IPPropertyRadioInt.h  IPPropertySliderDouble.h  IPPropertySliderInt.h  IPPropertySliderIntEven.h  IPPropertySliderIntOdd.h  IPPropertySpinnerInt.h  IPPropertyString.h  IPPropertyWidget.h
ImagePlay/media/examples/: binary_morphology.ipj  camera_hue.ipj  local_operations.ipj  raw_files.ipj
ImagePlay/res/: ImagePlay.icns  about_logo.afphoto  icon.aps  icon.rc  ressources.qrc  tutorial.afphoto
ImagePlay/src/: AboutWindow.cpp  ConnectionDialog.cpp  IPApplication.cpp  IPFilterLineEdit.cpp  IPHistogramWidget.cpp  IPImageViewer.cpp  IPMorphologyCheckbox.cpp  IPPluginManager.cpp  IPProcessEdge.cpp  IPProcessEdgeTmp.cpp  IPProcessFactory.cpp  IPProcessGrid.cpp  IPProcessGridScene.cpp  IPProcessInputOutputWidget.cpp  IPProcessList.cpp  IPProcessListTabWidget.cpp  IPProcessMessageWidget.cpp  IPProcessPropertiesWidget.cpp  IPProcessScript.cpp  IPProcessStep.cpp  IPProcessThread.cpp  IPZoomWidget.cpp  ImageViewerWindow.cpp  ImageViewerWindow.ui  MainWindow.cpp  MainWindow.ui  PluginGenerator.cpp  PluginGenerator.ui  SettingsWindow.cpp  SettingsWindow.ui  TutorialDialog.cpp  main.cpp
ImagePlay/ui/: AboutWindow.ui  ImageViewerWindow.ui  MainWindow.ui  PluginGenerator.ui  SettingsWindow.ui  TutorialDialog.ui
_fervor/: .gitattributes  .gitignore  CMakeLists.txt  Fervor.pri  README.mdown  fervor_lt.qm  fervor_lt.ts  fvavailableupdate.cpp  fvavailableupdate.h  fvignoredversions.cpp  fvignoredversions.h  fvplatform.cpp  fvplatform.h  fvupdateconfig.h.sample  fvupdateconfirmdialog.cpp  fvupdateconfirmdialog.h  fvupdateconfirmdialog.ui  fvupdater.cpp  fvupdater.h  fvupdatewindow.cpp  fvupdatewindow.h  fvupdatewindow.ui  fvversioncomparator.cpp  fvversioncomparator.h
(+133 files in other folders)
